name:                qset
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/Nadrieril/qset#readme
license:             BSD3
license-file:        LICENSE
author:              Nadrieril
maintainer:          nadrieril@gmail.com
copyright:           2016 Nadrieril
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable qset
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:
      base >= 4.7 && < 5
    , extensible-effects
